# linemod

./: README.md  package.xml
conf/: colorhist_detection.ros.ork  training.ork
src/: linemod_detect.cpp  linemod_train.cpp
