<package>
  <name>object_recognition_linemod</name>
  <version>0.3.7</version>
  <description>An object recognition pipeline that uses LINE-MOD from OpenCV</description>
  <author email="ms-152615@hs-weingarten.de">Marcel Schmidt</author>
  <maintainer email="ms-152615@hs-weingarten.de">Marcel Schmidt</maintainer>
  <license>BSD</license>
  
  <url>https://github.com/xMutzelx/linemod</url>

  <build_depend>ecto</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_renderer</build_depend>
  <build_depend>opencv_candidate</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_renderer</run_depend>
  <run_depend>opencv_candidate</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
